--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "passport1",
-  "version": "0.0.0",
+  "name": "node-passport",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^3.2.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "^2.4.2",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
-    "html": "0.0.10",
-    "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
